:green_apple: fixed input submit button on ios

--- a/src/css/pages/contact.less
+++ b/src/css/pages/contact.less
@@ -100,6 +100,8 @@
   }
 
   input[type=submit] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     cursor: pointer;
     outline: none;
     border: none;
